remove hardcoded references to port 8000

--- a/client/index.html
+++ b/client/index.html
@@ -1,28 +1,29 @@
-<html>
-<head>
+<!doctype html>
 <!--
    ASMO Web Interface
    Author:
        Rony Novianto (rony@ronynovianto.com)
 -->
-<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<title> ASMO </title>
-<link rel="stylesheet" type="text/css" href="css/index.css" />
-<link rel="stylesheet" type="text/css" href="framework/dojox/layout/resources/FloatingPane.css" />
-<link rel="stylesheet" type="text/css" href="framework/dojox/layout/resources/ResizeHandle.css" />
-<script type="text/javascript" src="framework/jquery.js"></script>
-<script type="text/javascript" src="framework/dojox/mobile/deviceTheme.js"></script>
-<script type="text/javascript" src="framework/dojo/dojo.js"></script>
-<script type="text/javascript" src="javascript/main.js"></script>
+<html>
+<head>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <title> ASMO </title>
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
+  <link rel="stylesheet" type="text/css" href="framework/dojox/layout/resources/FloatingPane.css" />
+  <link rel="stylesheet" type="text/css" href="framework/dojox/layout/resources/ResizeHandle.css" />
+  <script type="text/javascript" src="framework/jquery.js"></script>
+  <script type="text/javascript" src="framework/dojox/mobile/deviceTheme.js"></script>
+  <script type="text/javascript" src="framework/dojo/dojo.js"></script>
+  <script type="text/javascript" src="javascript/main.js"></script>
 </head>
 <body style="visibility:hidden;" onLoad="init();">
-<div id="toolbar">
-<button onclick="run();"><img src="images/run.png" width="50"><br> Run </button>
-</div>
-<div id="main"></div>
-<div id="chart_node" style="width:720px;"></div>
-<div id="debug"></div>
+  <div id="toolbar">
+    <button onclick="run();"><img src="images/run.png" width="50"><br> Run </button>
+  </div>
+  <div id="main"></div>
+  <div id="chart_node" style="width:720px;"></div>
+  <div id="debug"></div>
 </body>
 </html>
